--- a/AccessSystem/AccessSystem/Resources/Forms.TextBox.xaml
+++ b/AccessSystem/AccessSystem/Resources/Forms.TextBox.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:AccessSystem.Resources"
-                    xmlns:valid="clr-namespace:AccessSystem.Validators">
+                    xmlns:valid="clr-namespace:AccessSystem.Validators"
+                    xmlns:as="clr-namespace:AccessSystem">
     
     <Style TargetType="TextBox" x:Key="FormBaseTextBox">
         <Setter Property="Background">
@@ -24,13 +25,16 @@
         </Setter>
     </Style>
     <Style TargetType="TextBox" x:Key="FormTextBoxName" BasedOn="{StaticResource FormBaseTextBox}">
+        <Setter Property="Width" Value="{Binding Path=ActualWidth, ElementName=Grid, Converter={as:ElementsFormConverter}, ConverterParameter='284'}"/>
     </Style>
     <Style TargetType="TextBox" x:Key="FormTextBoxUser" BasedOn="{StaticResource FormBaseTextBox}">
         <Setter Property="Width" Value="250"/>
     </Style>
     <Style TargetType="TextBox" x:Key="FormTextBoxComment" BasedOn="{StaticResource FormBaseTextBox}">
+        <Setter Property="Width" Value="{Binding Path=ActualWidth, ElementName=Grid, Converter={as:ElementsFormConverter}, ConverterParameter='120'}"/>
     </Style>
     <Style TargetType="TextBox" x:Key="FormTextBoxConnectionURI" BasedOn="{StaticResource FormBaseTextBox}">
+        <Setter Property="Width" Value="{Binding Path=ActualWidth, ElementName=Grid, Converter={as:ElementsFormConverter}, ConverterParameter='120'}"/>
     </Style>
 
 </ResourceDictionary>
